Add Docker support and enhance server functionality
- Created .dockerignore to exclude unnecessary files from Docker context.
- Added Dockerfile for building the application image with Node.js.
- Introduced docker-compose.yml for easier service management.
- Updated .env.example with new environment variables for currency conversion.
- Enhanced server.js to include USD to RUB conversion logic and cost calculations.
- Modified public/app.js to display cost information in the chat interface.
- Updated index.html and styles.css for improved UI and SEO content.
- Renamed application to Kimi K2.5 and updated relevant text throughout the app.

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kimi K2 Thinking — простой клиент</title>
+    <title>Kimi K2.5 — умный чат с ИИ</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <main class="container">
       <header class="header">
-        <h1>Kimi K2 Thinking</h1>
+        <h1>Kimi K2.5</h1>
       </header>
 
       <div class="layout">
@@ -35,6 +35,33 @@
         </section>
       </div>
     </main>
+
+    <section class="seo">
+      <h2>Kimi K2.5 — умный чат для ответов и идей</h2>
+      <p>
+        Kimi K2.5 — веб‑клиент для общения с моделью Moonshot AI. Формулируйте вопросы, уточняйте
+        детали и получайте структурированные ответы. Подходит для учёбы, работы, писем, решений и
+        генерации идей в одном окне.
+      </p>
+      <p>
+        Интерфейс поддерживает историю диалогов, системный промпт и контекст. Подходит для студентов,
+        разработчиков, менеджеров и всех, кому нужны понятные объяснения и пошаговые рекомендации.
+      </p>
+      <p>
+        Уточняйте термины, проверяйте гипотезы, составляйте планы и получайте краткие резюме. Ответы
+        отображаются с подсветкой кода и форматированием для комфортного чтения.
+      </p>
+      <p>
+        Используйте Kimi K2.5 для повседневных задач: от переписки до разбора сложных тем. Сервис
+        помогает экономить время и быстрее находить нужную информацию.
+      </p>
+      <ul>
+        <li>чат с Kimi K2.5 на русском языке</li>
+        <li>структурированные ответы и краткие выводы</li>
+        <li>быстрый старт без регистрации</li>
+        <li>подходит для учёбы, работы и творчества</li>
+      </ul>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
     <link
