Update index.html to improve clarity of system role description in new chat dialog

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <aside class="sidebar">
           <button id="new-chat" type="button">Новый диалог</button>
           <div class="field">
-            System (для нового диалога, необязательно)
+            System <br> (для нового диалога, необязательно)
             <textarea id="system" rows="2" placeholder="Контекст или роль ассистента"></textarea>
           </div>
           <ul id="chat-list"></ul>
