Update index.html to enhance branding and SEO with new titles and descriptions for AI chat features

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kimi K2.5 — умный чат с ИИ</title>
+    <title>AI Чат — Kimi K2.5 и DeepSeek V3.2 | Умный чат с нейросетями</title>
     <link rel="stylesheet" href="/styles.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -18,11 +18,26 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/106601079" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
+     <!-- Yandex.RTB -->
+    <script>window.yaContextCb=window.yaContextCb||[]</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
   </head>
   <body>
+    <head>
+      <!-- Yandex.RTB R-A-18643982-1 -->
+      <script>
+        window.yaContextCb.push(() => {
+            Ya.Context.AdvManager.render({
+                "blockId": "R-A-18643982-1",
+                "type": "floorAd",
+                "platform": "touch"
+            })
+        })
+        </script>
+    </head>
     <main class="container">
       <header class="header">
-        <h1>Kimi K2.5</h1>
+        <h1>AI Чат — Kimi K2.5 и DeepSeek V3.2</h1>
       </header>
 
       <div class="layout">
@@ -61,26 +76,28 @@
     </main>
 
     <section class="seo">
-      <h2>Kimi K2.5 — умный чат для ответов и идей</h2>
+      <h2>AI Чат с Kimi K2.5 и DeepSeek V3.2 — ответы и идеи от нейросетей</h2>
       <p>
-        Kimi K2.5 — веб‑клиент для общения с моделью Moonshot AI. Формулируйте вопросы, уточняйте
-        детали и получайте структурированные ответы. Подходит для учёбы, работы, писем, решений и
-        генерации идей в одном окне.
+        Веб‑чат для общения с двумя мощными моделями: Kimi K2.5 (Moonshot AI) и DeepSeek V3.2. Выбирайте
+        модель под задачу — формулируйте вопросы, уточняйте детали и получайте структурированные
+        ответы. Подходит для учёбы, работы, кода, решений и генерации идей в одном окне.
       </p>
       <p>
-        Интерфейс поддерживает историю диалогов, системный промпт и контекст. Подходит для студентов,
-        разработчиков, менеджеров и всех, кому нужны понятные объяснения и пошаговые рекомендации.
+        Kimi K2.5 даёт развёрнутые объяснения и удобен для диалога и творческих задач. DeepSeek V3.2
+        силён в аналитике, программировании и точных формулировках. Интерфейс поддерживает историю
+        диалогов, системный промпт и контекст — для студентов, разработчиков и менеджеров.
       </p>
       <p>
         Уточняйте термины, проверяйте гипотезы, составляйте планы и получайте краткие резюме. Ответы
         отображаются с подсветкой кода и форматированием для комфортного чтения.
       </p>
       <p>
-        Используйте Kimi K2.5 для повседневных задач: от переписки до разбора сложных тем. Сервис
-        помогает экономить время и быстрее находить нужную информацию.
+        Используйте чат с Kimi K2.5 и DeepSeek V3.2 для повседневных задач: от переписки до разбора сложных
+        тем. Сервис помогает экономить время и быстрее находить нужную информацию.
       </p>
       <ul>
-        <li>чат с Kimi K2.5 на русском языке</li>
+        <li>чат с Kimi K2.5 и DeepSeek V3.2 на русском языке</li>
+        <li>две модели на выбор — под разные типы запросов</li>
         <li>структурированные ответы и краткие выводы</li>
         <li>быстрый старт без регистрации</li>
         <li>подходит для учёбы, работы и творчества</li>
