Enhance server and client functionality for streaming responses
- Updated server.js to support streaming responses from the OpenRouter API, improving real-time interaction.
- Added error handling for streaming and refined SSE (Server-Sent Events) implementation.
- Modified public/app.js to manage streaming content display in the chat interface, enhancing user experience.
- Updated index.html to include a new stylesheet for improved code highlighting.

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,13 @@
      <!-- Yandex.RTB -->
     <script>window.yaContextCb=window.yaContextCb||[]</script>
     <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/github-dark.min.css"
+    />
   </head>
   <body>
-    <head>
+    <header>
       <!-- Yandex.RTB R-A-18643982-1 -->
       <script>
         window.yaContextCb.push(() => {
@@ -34,7 +38,7 @@
             })
         })
         </script>
-    </head>
+    </header>
     <main class="container">
       <header class="header">
         <h1>AI Чат — Kimi K2.5 и DeepSeek V3.2</h1>
@@ -105,11 +109,7 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/styles/github-dark.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/build/highlight.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js" defer></script>
     <script src="/app.js" defer></script>
   </body>
 </html>
