--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AI Чат — Kimi K2.5 и DeepSeek V3.2 | Умный чат с нейросетями</title>
+    <title>AI Чат — множество моделей в одном окне | Умный чат с нейросетями</title>
     <link rel="stylesheet" href="/styles.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -41,7 +41,7 @@
     </header>
     <main class="container">
       <header class="header">
-        <h1>AI Чат — Kimi K2.5 и DeepSeek V3.2</h1>
+        <h1>AI Чат — множество моделей</h1>
       </header>
 
       <div class="layout">
@@ -68,7 +68,7 @@
             </label>
             <div id="image-upload-wrap" class="image-upload-wrap hidden">
               <label class="field image-upload-label">
-                Изображения (для Gemini 3 Pro Image)
+                Изображения (для моделей с поддержкой картинок)
                 <input type="file" id="image-input" accept="image/*" multiple />
               </label>
               <div id="image-previews" class="image-previews"></div>
@@ -80,28 +80,28 @@
     </main>
 
     <section class="seo">
-      <h2>AI Чат с Kimi K2.5 и DeepSeek V3.2 — ответы и идеи от нейросетей</h2>
+      <h2>AI Чат — десятки моделей в одном окне</h2>
       <p>
-        Веб‑чат для общения с двумя мощными моделями: Kimi K2.5 (Moonshot AI) и DeepSeek V3.2. Выбирайте
-        модель под задачу — формулируйте вопросы, уточняйте детали и получайте структурированные
-        ответы. Подходит для учёбы, работы, кода, решений и генерации идей в одном окне.
+        Веб‑чат с выбором множества нейросетей: Kimi, DeepSeek, Qwen, GPT, Mistral, Palmyra, GLM,
+        MiMo, Nemotron, Nova и другие. Выбирайте модель под задачу — код, рассуждения, диалог или
+        креатив. Формулируйте вопросы, уточняйте детали и получайте структурированные ответы в одном окне.
       </p>
       <p>
-        Kimi K2.5 даёт развёрнутые объяснения и удобен для диалога и творческих задач. DeepSeek V3.2
-        силён в аналитике, программировании и точных формулировках. Интерфейс поддерживает историю
-        диалогов, системный промпт и контекст — для студентов, разработчиков и менеджеров.
+        Есть модели для программирования (Qwen3 Coder, GPT-5.2-Codex), для рассуждений (DeepSeek Speciale,
+        Step 3.5 Flash), для общения и творчества (Mistral Small Creative, MiniMax M2-her). Интерфейс
+        поддерживает историю диалогов, системный промпт и контекст — для студентов, разработчиков и менеджеров.
       </p>
       <p>
         Уточняйте термины, проверяйте гипотезы, составляйте планы и получайте краткие резюме. Ответы
         отображаются с подсветкой кода и форматированием для комфортного чтения.
       </p>
       <p>
-        Используйте чат с Kimi K2.5 и DeepSeek V3.2 для повседневных задач: от переписки до разбора сложных
-        тем. Сервис помогает экономить время и быстрее находить нужную информацию.
+        Используйте чат для повседневных задач: от переписки до разбора сложных тем. Сервис помогает
+        экономить время и быстрее находить нужную информацию.
       </p>
       <ul>
-        <li>чат с Kimi K2.5 и DeepSeek V3.2 на русском языке</li>
-        <li>две модели на выбор — под разные типы запросов</li>
+        <li>много моделей на выбор — под код, рассуждения и диалог</li>
+        <li>чат на русском языке</li>
         <li>структурированные ответы и краткие выводы</li>
         <li>быстрый старт без регистрации</li>
         <li>подходит для учёбы, работы и творчества</li>
