Implement SEO enhancements and model page routing in server.js
- Added functions to generate slugs and SEO content for model pages, improving URL structure and search engine visibility.
- Created a new route to serve model pages based on slugs, enhancing user navigation.
- Updated index.html to reflect new SEO titles and descriptions for better branding.
- Modified public/app.js to support default model selection from the page context.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AI Чат — множество моделей в одном окне | Умный чат с нейросетями</title>
+    <title>AI онлайн бесплатно — ИИ онлайн, множество моделей | Чат с ИИ</title>
     <link rel="stylesheet" href="/styles.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -41,7 +41,7 @@
     </header>
     <main class="container">
       <header class="header">
-        <h1>AI Чат — множество моделей</h1>
+        <h1>ИИ онлайн бесплатно — AI чат</h1>
       </header>
 
       <div class="layout">
@@ -80,30 +80,31 @@
     </main>
 
     <section class="seo">
-      <h2>AI Чат — десятки моделей в одном окне</h2>
+      <h2>ИИ онлайн бесплатно — AI онлайн, десятки моделей в одном окне</h2>
       <p>
-        Веб‑чат с выбором множества нейросетей: Kimi, DeepSeek, Qwen, GPT, Mistral, Palmyra, GLM,
-        MiMo, Nemotron, Nova и другие. Выбирайте модель под задачу — код, рассуждения, диалог или
-        креатив. Формулируйте вопросы, уточняйте детали и получайте структурированные ответы в одном окне.
+        ИИ онлайн бесплатно: веб‑чат с выбором множества нейросетей — Kimi, DeepSeek, Qwen, GPT, Mistral,
+        Palmyra, GLM, MiMo, Nemotron, Nova и другие. AI онлайн без регистрации: выбирайте модель под задачу —
+        код, рассуждения, диалог или креатив. Формулируйте вопросы и получайте структурированные ответы.
       </p>
       <p>
         Есть модели для программирования (Qwen3 Coder, GPT-5.2-Codex), для рассуждений (DeepSeek Speciale,
-        Step 3.5 Flash), для общения и творчества (Mistral Small Creative, MiniMax M2-her). Интерфейс
-        поддерживает историю диалогов, системный промпт и контекст — для студентов, разработчиков и менеджеров.
+        Step 3.5 Flash), для общения и творчества (Mistral Small Creative, MiniMax M2-her). ИИ бесплатно
+        онлайн: интерфейс поддерживает историю диалогов, системный промпт и контекст — для студентов,
+        разработчиков и менеджеров.
       </p>
       <p>
-        Уточняйте термины, проверяйте гипотезы, составляйте планы и получайте краткие резюме. Ответы
-        отображаются с подсветкой кода и форматированием для комфортного чтения.
+        AI бесплатно: уточняйте термины, проверяйте гипотезы, составляйте планы и получайте краткие резюме.
+        Ответы отображаются с подсветкой кода и форматированием для комфортного чтения.
       </p>
       <p>
-        Используйте чат для повседневных задач: от переписки до разбора сложных тем. Сервис помогает
-        экономить время и быстрее находить нужную информацию.
+        Используйте ИИ онлайн для повседневных задач: от переписки до разбора сложных тем. AI онлайн
+        бесплатно помогает экономить время и быстрее находить нужную информацию.
       </p>
       <ul>
-        <li>много моделей на выбор — под код, рассуждения и диалог</li>
-        <li>чат на русском языке</li>
+        <li>ИИ онлайн бесплатно — много моделей на выбор</li>
+        <li>AI онлайн, AI бесплатно — чат на русском языке</li>
         <li>структурированные ответы и краткие выводы</li>
-        <li>быстрый старт без регистрации</li>
+        <li>ИИ бесплатно — быстрый старт без регистрации</li>
         <li>подходит для учёбы, работы и творчества</li>
       </ul>
     </section>
