Add blog functionality and new articles
- Integrated a blog section into the application, allowing users to access and read various articles.
- Added multiple blog posts covering topics related to AI and its impact on different industries.
- Updated the homepage to include a blog feed, enhancing user engagement and content visibility.
- Created a new HTML template for blog pages and updated styles for better presentation.
- Modified sitemap.xml to include new blog URLs for improved SEO.

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,8 @@
 
     {{MODEL_LINKS_BLOCK}}
 
+    {{BLOG_BLOCK}}
+
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js" defer></script>
     <script src="/app.js" defer></script>
